--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Free</title>
-</head>
+    <title>MusicFree</title>
+    </head>
 <body>
     <p>Olá Mundo!!!</p>
+    <p3>olá</p3>
 </body>
 </html>
