--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
 <body>
     <p>Olá Mundo!!!</p>
-    <button type="button">botão</button>
+    <button>botão</button>
 </body>
 </html>
