--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ Ipsa dolores optio dignissimos! Earum saepe ipsum molestias quam facilis, ipsa, 
 Fugiat earum excepturi dolores quam iusto magnam iure et nulla cupiditate, labore ullam iste culpa molestias dolorum id molestiae odit, non unde? Minima, pariatur. Quod natus recusandae magnam ducimus suscipit.
 Unde ratione a officiis est, ad accusantium autem. Non doloremque nam soluta eum aut eaque aliquid. Corrupti neque fugiat repellendus molestias, molestiae beatae hic excepturi eligendi in maxime, veritatis asperiores?
 Dignissimos distinctio aperiam placeat porro dolorem maxime magnam cumque? Odio rem cum sed quo a similique ipsam perspiciatis earum labore corporis iusto, et explicabo, eos rerum quae eaque modi molestias!</p>
-<button>Link</button>
+<button>Like</button><button>Dislike</button>
 </body>
 </html>
