--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MusicFree</title>
     </head>
 <body>
-<H3>Lorem ipsum, dolor</H3>
+<H3>MusicFree</H3>
 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis asperiores officiis quas incidunt voluptas, laborum eos eveniet eligendi laudantium necessitatibus? Quidem architecto in, quas placeat illo rerum libero eius corrupti.</P>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate tempore repellat fuga adipisci eum magnam alias quidem, iure vero beatae doloremque cum molestias, deserunt explicabo harum, exercitationem tenetur voluptatem ducimus.
 Ipsa dolores optio dignissimos! Earum saepe ipsum molestias quam facilis, ipsa, nostrum odio at aliquam repellendus labore id reprehenderit provident excepturi, dolore voluptatibus voluptatum minima ullam optio quod autem consectetur?
