--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     </head>
 <body>
 <H3>MusicFree</H3>
-<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis asperiores officiis quas incidunt voluptas, laborum eos eveniet eligendi laudantium necessitatibus? Quidem architecto in, quas placeat illo rerum libero eius corrupti.</P>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate tempore repellat fuga adipisci eum magnam alias quidem, iure vero beatae doloremque cum molestias, deserunt explicabo harum, exercitationem tenetur voluptatem ducimus.
-Ipsa dolores optio dignissimos! Earum saepe ipsum molestias quam facilis, ipsa, nostrum odio at aliquam repellendus labore id reprehenderit provident excepturi, dolore voluptatibus voluptatum minima ullam optio quod autem consectetur?
-Fugiat earum excepturi dolores quam iusto magnam iure et nulla cupiditate, labore ullam iste culpa molestias dolorum id molestiae odit, non unde? Minima, pariatur. Quod natus recusandae magnam ducimus suscipit.
-Unde ratione a officiis est, ad accusantium autem. Non doloremque nam soluta eum aut eaque aliquid. Corrupti neque fugiat repellendus molestias, molestiae beatae hic excepturi eligendi in maxime, veritatis asperiores?
-Dignissimos distinctio aperiam placeat porro dolorem maxime magnam cumque? Odio rem cum sed quo a similique ipsam perspiciatis earum labore corporis iusto, et explicabo, eos rerum quae eaque modi molestias!</p>
+<P>Ouça Música Grátis</P>
+<H4>Música 1 - Lorem ipsum dolor</H4>
+
 <button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
 </body>
 </html>
