--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 <H3>MusicFree</H3>
 <P>Ouça Música Grátis</P>
 <H4>Música 1 - Lorem ipsum dolor</H4>
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
-[                                                   ]
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
 
+<h4>Nome da Música</h4>
 
 
 <button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
