--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>MusicFree</title>
     </head>
 <body>
-<H3>MusicFree</H3>
-<P>Ouça Música Grátis</P>
+<H3>MusicFree - Ouça Música Grátis</H3>
 <H4>Música 1 - Lorem ipsum dolor</H4>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
