--- a/index.html
+++ b/index.html
@@ -19,5 +19,31 @@
 
 
 <button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
+
+<H4>Música 2 - Lorem ipsum dolor</H4>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+
+<h4>Nome da Música</h4>
+
+
+<button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
+
+<H4>Música 2 - Lorem ipsum dolor</H4>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>
+
+<h4>Nome da Música</h4>
+
+
+<button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
 </body>
 </html>
