--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MusicFree</title>
     </head>
 <body>
-<H3>MusicFree - Ouça Música Grátis</H3>
+<H1>MusicFree - Ouça Música Grátis</H1>
 <H4>Música 1 - Lorem ipsum dolor</H4>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
@@ -15,7 +15,7 @@
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
 
-<h4>Nome da Música</h4>
+<h4>Nome da Música 1</h4>
 
 
 <button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
