--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicFree</title>
-    </head>
+</head>
 <body>
 <H1>MusicFree - Ouça Música Grátis</H1>
 <H4>Música 1 - Lorem ipsum dolor</H4>
@@ -18,7 +18,7 @@
 <h4>Nome da Música 1</h4>
 
 
-<button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
+<button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Nome da MúsicaMais...</button>
 
 <H4>Música 2 - Lorem ipsum dolor</H4>
 <p>[---------------------------------------------------]</p>
@@ -36,7 +36,7 @@
 <H4>Música 2 - Lorem ipsum dolor</H4>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
-<p>[---------------------------------------------------]</p>
+<p>[---------------------------------------------------]</p>Nome da Música
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
