--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h4>Nome da Música 1</h4>
 
 
-<button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Nome da MúsicaMais...</button>
+<button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
 
 <H4>Música 2 - Lorem ipsum dolor</H4>
 <p>[---------------------------------------------------]</p>
