--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
 
-<h4>Nome da Música</h4>
+<h4>Nome da Música 2</h4>
 
 
 <button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
 
-<H4>Música 2 - Lorem ipsum dolor</H4>
+<H4>Música 3 - Lorem ipsum dolor</H4>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
-<p>[---------------------------------------------------]</p>Nome da Música
+<p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
 <p>[---------------------------------------------------]</p>
 
-<h4>Nome da Música</h4>
+<h4>Nome da Música 3</h4>
 
 
 <button>Gostei</button><button>Não Gostei</button><button>Compartilhar</button><button>Mais...</button>
