--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicFree</title>
+    <style>
+        body {background-color: cornflowerblue;}
+    </style>
 </head>
 <body>
 <H1>MusicFree - Ouça Música Grátis</H1>
