--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicFree</title>
     <style>
-        body {background: url(https://static.vecteezy.com/ti/vetor-gratis/p1/1431918-abstrato-azul-fundo-com-curvas-onduladas-vetor.jpg);}
+        body {background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);}
     </style>
 </head>
 <body>
