--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicFree</title>
     <style>
-        body {background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);}
+        body {background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);
+              font-size: large;
+             }
     </style>
 </head>
 <body>
