--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         body {background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);
               font-size: large;
              }
+        h1   {color: blue;
+
+             }
     </style>
 </head>
 <body>
