--- a/index.html
+++ b/index.html
@@ -3,15 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
     <title>MusicFree</title>
-    <style>
-        body {background: url(https://img.freepik.com/fotos-premium/fundo-gradiente-de-luxo-abstrato-azul-escuro-liso-com-banner-de-estudio-vinheta-preta_1258-100444.jpg);
-              font-size: large;
-             }
-        h1   {color: blue;
-
-             }
-    </style>
 </head>
 <body>
 <H1>MusicFree - Ouça Música Grátis</H1>
