--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <H1>MusicFree - Ouça Música Grátis</H1>
 <H4>Música 1 - Lorem ipsum dolor</H4>
-<iframe width="X" height="Y" src=https://www.youtube.com/watch?v=LVMHYzVS9Y4 frameborder="0" allowfullscreen></iframe>
+<img src="https://www.youtube.com/watch?v=LVMHYzVS9Y4" alt="">
 
 <h4>Nome da Música 1</h4>
 
